--- a/slides/NLP-IR.tex
+++ b/slides/NLP-IR.tex
@@ -290,7 +290,7 @@ t3 & program\\
  \item Documents can be \textit{represented} as vectors of terms, where each term is a vector dimension \cite{salton1975vector}. 
  \item Documents with different words and lengths will reside in the same vector space.
  \item These types of representations are called \emph{Bag of Words}.
- \item In bag-of-words-representations the order of words and the linguistic structure of a sentence is loss. 
+ \item In bag-of-words-representations the order of words and the linguistic structure of a sentence is lost. 
  \item The value of each dimension is a weight that represents the relevance of the term $t_{i}$ in the document $d$.
 
 \begin{equation}
