--- a/slides/NLP-introduction.tex
+++ b/slides/NLP-introduction.tex
@@ -532,15 +532,35 @@ classifier with the following hand-crafted features for representing tweets:
 \begin{frame}{Feature Engineering and Deep Learning}
 \begin{scriptsize}
 \begin{itemize}
+\item Up until 2014 most state-of-the-art NLP systems were based on feature engineering + shallow machine learning models (e.g., SVMs, HMMs).
 \item Designing the features of a winning NLP system requires a lot of domain-specific knowledge.
 \item The NRC system was built before deep learning became popular in NLP.
-\item Deep Learning systems on the other hand rely on representation learning to automatically learn good representations.
-\item Large amounts of training data and faster multicore CPU/GPU machines are key in the success of deep learning. 
-\item \textbf{Neural networks} and \textbf{word embeddings} play a key role in modern  architectures for NLP.
+\item Deep Learning systems on the other hand rely on neural networks to automatically learn good representations.
+\end{itemize}
+\end{scriptsize}
 
+
+
+
+
+\end{frame}
+
+
+\begin{frame}{Feature Engineering and Deep Learning}
+
+      \begin{figure}[h]
+        	\includegraphics[scale = 0.25]{pics/MLvsDL.png}
+        \end{figure} 
+
+\begin{scriptsize}
+\begin{itemize}
+\item Deep Learning yields state-of-the-art results in most NLP tasks. 
+\item Large amounts of training data and faster multicore GPU machines are key in the success of deep learning. 
+\item \textbf{Neural networks} and \textbf{word embeddings} play a key role in modern  sentiment analysis models.
 \end{itemize}
 \end{scriptsize}
 \end{frame}
+
 
 
 \begin{frame}{Deep Learning and Linguistic Concepts}
