--- a/slides/NLP-IR.tex
+++ b/slides/NLP-IR.tex
@@ -40,7 +40,7 @@
 {\raise-0.05em\hbox{\Large $#1$}}{\hbox{\large $#1$}}{#1}}}
 \newcommand{\bigtimes}{\BIGOP{\times}}
 \vspace{-0.5cm}
-\title{Natural Language Processing \\ Vectors Space Model and Information Retrieval}
+\title{Natural Language Processing \\ Vector Space Model and Information Retrieval}
 \vspace{-0.5cm}
 \author[Felipe Bravo Márquez]{\footnotesize
 %\author{\footnotesize  
