fix error about zipf law

--- a/slides/NLP-IR.tex
+++ b/slides/NLP-IR.tex
@@ -215,7 +215,7 @@ t3 & program\\
 	\caption{Zipf's law}
 \end{figure}
 \begin{itemize}
- \item If we plot a $log-log$ graph, we obtain a straight line with slope  $-\beta^{-1}$.
+ \item If we plot a $log$-$log$ graph, we obtain a straight line with slope  $-\beta$.
  \item Listing the most frequent words of a corpus can be used to build a \emph{stopwords} list. 
 \end{itemize}
 }
