--- a/slides/NLP-neural.tex
+++ b/slides/NLP-neural.tex
@@ -126,6 +126,16 @@
 \end{frame}
 
 
+
+\begin{frame}{Fully connected layers as vector-matrix multiplications}
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.65]{pics/neural_net_mat_mul.pdf}
+\end{figure}
+\end{frame}
+
+
+
 \begin{frame}{Neural Networks as Mathematical Functions}
 \begin{scriptsize}
 \begin{itemize}
@@ -521,6 +531,17 @@ of a loss function $L$ for a feed-forward neural network with respect to all its
 
 \end{scriptsize}
 \end{frame}
+
+
+\begin{frame}{Neural Network Training}
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.41]{pics/neural_net.pdf}
+\end{figure}
+\end{frame}
+
+
+
 
 
 \begin{frame}{Derivative Chain Rule Recap}
@@ -1125,7 +1146,7 @@ addition , etc.).
 
 \item The regularizers discussed for linear models, namely $L_2$ , $L_1$, and the elastic-net, are also relevant for neural networks.
 
-\item Another effective technique for preventing neural networks from overfitting the training data is \textbf{dropout training} \cite{hinton2012improving}.
+\item Another effective technique for preventing neural networks from overfitting the training data is \textbf{dropout training} \cite{srivastava2014dropout}.
 
 
 \end{itemize}
