--- a/tutorials/Auxiliar_2.ipynb
+++ b/tutorials/Auxiliar_2.ipynb
@@ -39,6 +39,7 @@
     "- `gensim`\n",
     "- `plotly`\n",
     "- `sklearn`\n",
+    "- `wefe`\n",
     "\n",
     "Una vez resuelto, pueden utilizar cualquier parte del código que les parezca prudente para la tarea 1 (que también es de clasificación de texto! 😊).\n",
     "\n",
@@ -245,8 +246,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T14:57:04.242826Z",
-     "start_time": "2020-05-07T14:56:59.045906Z"
+     "end_time": "2020-05-07T19:11:41.397200Z",
+     "start_time": "2020-05-07T19:11:32.488001Z"
     }
    },
    "outputs": [],
@@ -300,8 +301,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:31:00.357111Z",
-     "start_time": "2020-05-07T16:30:16.814600Z"
+     "end_time": "2020-05-07T19:12:51.320868Z",
+     "start_time": "2020-05-07T19:11:41.470005Z"
     }
    },
    "outputs": [],
@@ -319,8 +320,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T14:57:58.952938Z",
-     "start_time": "2020-05-07T14:57:58.861184Z"
+     "end_time": "2020-05-07T19:12:51.878612Z",
+     "start_time": "2020-05-07T19:12:51.626049Z"
     }
    },
    "outputs": [],
@@ -334,8 +335,36 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:28:27.825207Z",
-     "start_time": "2020-05-07T15:28:17.749026Z"
+     "end_time": "2020-05-07T19:15:36.682734Z",
+     "start_time": "2020-05-07T19:15:36.677747Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "content.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-07T19:15:59.644037Z",
+     "start_time": "2020-05-07T19:15:59.639049Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string.punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-07T19:16:25.633217Z",
+     "start_time": "2020-05-07T19:16:15.098899Z"
     }
    },
    "outputs": [],
@@ -347,7 +376,7 @@
     "stopwords = pd.read_csv(\n",
     "    'https://raw.githubusercontent.com/Alir3z4/stop-words/master/spanish.txt'\n",
     ").values\n",
-    "stopwords = Counter(stopwords.flatten().tolist() + 'a')\n",
+    "stopwords = Counter(stopwords.flatten().tolist())\n",
     "\n",
     "\n",
     "def simple_tokenizer(doc, lower=False):\n",
@@ -372,13 +401,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:28:30.468965Z",
-     "start_time": "2020-05-07T15:28:30.464976Z"
+     "end_time": "2020-05-07T19:16:50.824807Z",
+     "start_time": "2020-05-07T19:16:50.818823Z"
     }
    },
    "outputs": [],
    "source": [
-    "print(\"Ejemplo de alguna noticia: {}\".format(cleaned_content[12]))"
+    "print(\"Ejemplo de alguna noticia: {}\".format(cleaned_content[14]))"
    ]
   },
   {
@@ -402,8 +431,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:29:00.736747Z",
-     "start_time": "2020-05-07T15:28:48.667906Z"
+     "end_time": "2020-05-07T19:18:18.064454Z",
+     "start_time": "2020-05-07T19:18:03.208281Z"
     }
    },
    "outputs": [],
@@ -418,8 +447,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:29:03.671277Z",
-     "start_time": "2020-05-07T15:29:03.193023Z"
+     "end_time": "2020-05-07T19:18:24.375161Z",
+     "start_time": "2020-05-07T19:18:23.796702Z"
     }
    },
    "outputs": [],
@@ -439,8 +468,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:29:39.011638Z",
-     "start_time": "2020-05-07T15:29:05.954611Z"
+     "end_time": "2020-05-07T19:20:57.432220Z",
+     "start_time": "2020-05-07T19:20:13.544388Z"
     }
    },
    "outputs": [],
@@ -454,8 +483,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:29:41.186008Z",
-     "start_time": "2020-05-07T15:29:41.180025Z"
+     "end_time": "2020-05-07T19:21:03.964097Z",
+     "start_time": "2020-05-07T19:21:03.958113Z"
     }
    },
    "outputs": [],
@@ -609,20 +638,20 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:34:50.182053Z",
-     "start_time": "2020-05-07T15:34:48.417552Z"
+     "end_time": "2020-05-07T19:23:19.548567Z",
+     "start_time": "2020-05-07T19:23:18.572531Z"
     }
    },
    "outputs": [],
    "source": [
     "# Si entrenaste el modelo y lo quieres guardar, descomentar el siguiente bloque.\n",
-    "if not os.path.exists('./pretrained_models'):\n",
-    "    os.mkdir('./pretrained_models')\n",
-    "biobio_w2v.save('./pretrained_models/biobio_w2v.model')\n",
+    "#if not os.path.exists('./pretrained_models'):\n",
+    "#    os.mkdir('./pretrained_models')\n",
+    "#biobio_w2v.save('./pretrained_models/biobio_w2v.model')\n",
     "\n",
     "\n",
     "# cargar el modelo (si es que lo entrenaron desde local.)\n",
-    "#biobio_w2v = KeyedVectors.load(\"./pretrained_models/biobio_w2v.model\", mmap='r')\n"
+    "biobio_w2v = KeyedVectors.load(\"./pretrained_models/biobio_w2v.model\", mmap='r')\n"
    ]
   },
   {
@@ -675,8 +704,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:34:52.253793Z",
-     "start_time": "2020-05-07T15:34:52.245815Z"
+     "end_time": "2020-05-07T19:28:33.343259Z",
+     "start_time": "2020-05-07T19:28:33.262476Z"
     }
    },
    "outputs": [],
@@ -689,8 +718,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:08:55.035508Z",
-     "start_time": "2020-05-07T15:08:55.025538Z"
+     "end_time": "2020-05-07T19:28:59.154190Z",
+     "start_time": "2020-05-07T19:28:59.146214Z"
     }
    },
    "outputs": [],
@@ -703,8 +732,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:08:58.878258Z",
-     "start_time": "2020-05-07T15:08:58.852261Z"
+     "end_time": "2020-05-07T19:29:49.464492Z",
+     "start_time": "2020-05-07T19:29:49.432164Z"
     }
    },
    "outputs": [],
@@ -717,8 +746,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:51:29.528394Z",
-     "start_time": "2020-05-07T15:51:29.519416Z"
+     "end_time": "2020-05-07T19:29:56.028795Z",
+     "start_time": "2020-05-07T19:29:56.014832Z"
     }
    },
    "outputs": [],
@@ -731,8 +760,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:51:31.983676Z",
-     "start_time": "2020-05-07T15:51:31.973702Z"
+     "end_time": "2020-05-07T19:32:29.842609Z",
+     "start_time": "2020-05-07T19:32:29.829644Z"
     },
     "scrolled": true
    },
@@ -746,8 +775,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:51:34.372931Z",
-     "start_time": "2020-05-07T15:51:34.363955Z"
+     "end_time": "2020-05-07T19:32:39.355210Z",
+     "start_time": "2020-05-07T19:32:39.348228Z"
     }
    },
    "outputs": [],
@@ -760,8 +789,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:51:36.854567Z",
-     "start_time": "2020-05-07T15:51:36.845591Z"
+     "end_time": "2020-05-07T19:32:59.165524Z",
+     "start_time": "2020-05-07T19:32:59.153557Z"
     }
    },
    "outputs": [],
@@ -774,8 +803,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:51:39.338023Z",
-     "start_time": "2020-05-07T15:51:39.329078Z"
+     "end_time": "2020-05-07T19:33:34.899941Z",
+     "start_time": "2020-05-07T19:33:34.885980Z"
     }
    },
    "outputs": [],
@@ -788,8 +817,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:51:43.466431Z",
-     "start_time": "2020-05-07T15:51:43.457456Z"
+     "end_time": "2020-05-07T19:33:41.167456Z",
+     "start_time": "2020-05-07T19:33:41.155482Z"
     }
    },
    "outputs": [],
@@ -802,8 +831,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:51:47.515546Z",
-     "start_time": "2020-05-07T15:51:47.508564Z"
+     "end_time": "2020-05-07T19:33:47.881474Z",
+     "start_time": "2020-05-07T19:33:47.871502Z"
     }
    },
    "outputs": [],
@@ -816,8 +845,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:51:59.905153Z",
-     "start_time": "2020-05-07T15:51:59.896177Z"
+     "end_time": "2020-05-07T19:33:55.044392Z",
+     "start_time": "2020-05-07T19:33:55.033420Z"
     }
    },
    "outputs": [],
@@ -850,13 +879,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:52:31.068265Z",
-     "start_time": "2020-05-07T15:52:31.060287Z"
+     "end_time": "2020-05-07T19:36:24.480150Z",
+     "start_time": "2020-05-07T19:36:24.462198Z"
     }
    },
    "outputs": [],
    "source": [
-    "biobio_w2v.wv.most_similar(positive=[\"Bolsonaro\", \"Argentina\"], negative=['Macri'], topn=3)"
+    "biobio_w2v.wv.most_similar(positive=[\"Bolsonaro\", \"Argentina\"], negative=['Macri'], topn=10)"
    ]
   },
   {
@@ -864,13 +893,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:06:12.062059Z",
-     "start_time": "2020-05-07T16:06:12.053084Z"
+     "end_time": "2020-05-07T19:36:10.444907Z",
+     "start_time": "2020-05-07T19:36:10.435930Z"
     }
    },
    "outputs": [],
    "source": [
-    "biobio_w2v.wv.most_similar(positive=[\"Rey\", \"Huawei\"], negative=['China'], topn=3)"
+    "biobio_w2v.wv.most_similar(positive=[\"Chile\", \"Huawei\"], negative=['China'], topn=10)"
    ]
   },
   {
@@ -887,8 +916,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:55:49.184734Z",
-     "start_time": "2020-05-07T15:55:49.137603Z"
+     "end_time": "2020-05-07T19:38:06.260264Z",
+     "start_time": "2020-05-07T19:38:06.208183Z"
     }
    },
    "outputs": [],
@@ -907,8 +936,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T15:59:58.347199Z",
-     "start_time": "2020-05-07T15:59:58.341200Z"
+     "end_time": "2020-05-07T19:38:12.009463Z",
+     "start_time": "2020-05-07T19:38:11.999489Z"
     }
    },
    "outputs": [],
@@ -921,8 +950,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:01:18.855602Z",
-     "start_time": "2020-05-07T16:01:18.818664Z"
+     "end_time": "2020-05-07T19:38:18.104614Z",
+     "start_time": "2020-05-07T19:38:18.066715Z"
     }
    },
    "outputs": [],
@@ -936,8 +965,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:02:51.504400Z",
-     "start_time": "2020-05-07T16:01:46.038533Z"
+     "end_time": "2020-05-07T19:39:45.349695Z",
+     "start_time": "2020-05-07T19:38:28.069987Z"
     }
    },
    "outputs": [],
@@ -966,8 +995,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:03:12.625351Z",
-     "start_time": "2020-05-07T16:03:12.619368Z"
+     "end_time": "2020-05-07T19:39:50.210194Z",
+     "start_time": "2020-05-07T19:39:50.202212Z"
     }
    },
    "outputs": [],
@@ -991,8 +1020,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:04:14.385046Z",
-     "start_time": "2020-05-07T16:04:14.367048Z"
+     "end_time": "2020-05-07T19:39:55.187070Z",
+     "start_time": "2020-05-07T19:39:55.171110Z"
     }
    },
    "outputs": [],
@@ -1010,8 +1039,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:07:40.829336Z",
-     "start_time": "2020-05-07T16:07:40.814374Z"
+     "end_time": "2020-05-07T19:40:00.737661Z",
+     "start_time": "2020-05-07T19:40:00.709715Z"
     }
    },
    "outputs": [],
@@ -1061,8 +1090,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:10:04.906449Z",
-     "start_time": "2020-05-07T16:10:04.573024Z"
+     "end_time": "2020-05-07T19:44:27.345723Z",
+     "start_time": "2020-05-07T19:44:26.863014Z"
     },
     "scrolled": false
    },
@@ -1085,7 +1114,9 @@
     "container = widgets.HBox([textbox])\n",
     "textbox.observe(response, names=\"value\")\n",
     "\n",
-    "widgets.VBox([container, fig])"
+    "widgets.VBox([container, fig])\n",
+    "\n",
+    "a"
    ]
   },
   {
@@ -1122,8 +1153,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:38:27.041960Z",
-     "start_time": "2020-05-07T16:38:27.030966Z"
+     "end_time": "2020-05-07T19:44:39.200212Z",
+     "start_time": "2020-05-07T19:44:39.176275Z"
     }
    },
    "outputs": [],
@@ -1136,8 +1167,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:38:29.616977Z",
-     "start_time": "2020-05-07T16:38:29.604012Z"
+     "end_time": "2020-05-07T19:44:45.081609Z",
+     "start_time": "2020-05-07T19:44:45.065652Z"
     }
    },
    "outputs": [],
@@ -1157,8 +1188,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:38:32.158411Z",
-     "start_time": "2020-05-07T16:38:32.118305Z"
+     "end_time": "2020-05-07T19:44:58.537303Z",
+     "start_time": "2020-05-07T19:44:58.486439Z"
     }
    },
    "outputs": [],
@@ -1207,8 +1238,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:38:34.641244Z",
-     "start_time": "2020-05-07T16:38:34.634262Z"
+     "end_time": "2020-05-07T19:45:05.304455Z",
+     "start_time": "2020-05-07T19:45:05.296477Z"
     }
    },
    "outputs": [],
@@ -1238,8 +1269,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:38:37.212127Z",
-     "start_time": "2020-05-07T16:38:37.203151Z"
+     "end_time": "2020-05-07T19:46:45.911556Z",
+     "start_time": "2020-05-07T19:46:45.902582Z"
     }
    },
    "outputs": [],
@@ -1289,8 +1320,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:38:39.737534Z",
-     "start_time": "2020-05-07T16:38:39.731551Z"
+     "end_time": "2020-05-07T19:50:34.393237Z",
+     "start_time": "2020-05-07T19:50:34.387253Z"
     }
    },
    "outputs": [],
@@ -1309,8 +1340,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:38:55.645116Z",
-     "start_time": "2020-05-07T16:38:42.240162Z"
+     "end_time": "2020-05-07T19:50:59.881521Z",
+     "start_time": "2020-05-07T19:50:40.532331Z"
     }
    },
    "outputs": [],
@@ -1335,8 +1366,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:38:59.391217Z",
-     "start_time": "2020-05-07T16:38:58.191782Z"
+     "end_time": "2020-05-07T19:51:07.108644Z",
+     "start_time": "2020-05-07T19:51:05.799089Z"
     }
    },
    "outputs": [],
@@ -1349,8 +1380,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:39:01.928733Z",
-     "start_time": "2020-05-07T16:39:01.915758Z"
+     "end_time": "2020-05-07T19:51:12.601957Z",
+     "start_time": "2020-05-07T19:51:12.589989Z"
     }
    },
    "outputs": [],
@@ -1364,8 +1395,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:39:04.478441Z",
-     "start_time": "2020-05-07T16:39:04.429521Z"
+     "end_time": "2020-05-07T19:51:18.863055Z",
+     "start_time": "2020-05-07T19:51:18.805699Z"
     },
     "scrolled": false
    },
@@ -1379,8 +1410,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:39:07.108993Z",
-     "start_time": "2020-05-07T16:39:07.102972Z"
+     "end_time": "2020-05-07T19:51:25.139392Z",
+     "start_time": "2020-05-07T19:51:25.132412Z"
     }
    },
    "outputs": [],
@@ -1480,8 +1511,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:53:04.675373Z",
-     "start_time": "2020-05-07T16:53:04.671343Z"
+     "end_time": "2020-05-07T20:02:04.707045Z",
+     "start_time": "2020-05-07T20:02:04.675157Z"
     }
    },
    "outputs": [],
@@ -1496,8 +1527,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:55:16.706346Z",
-     "start_time": "2020-05-07T16:55:16.700327Z"
+     "end_time": "2020-05-07T20:06:09.985618Z",
+     "start_time": "2020-05-07T20:06:09.979635Z"
     }
    },
    "outputs": [],
@@ -1506,7 +1537,7 @@
     "female_words = ['mujer', 'mujeres', 'niña', 'madre', 'tía', 'abuela', 'sobrina']\n",
     "\n",
     "career = [\n",
-    "    'ingeniero', 'abogado', 'médico', 'astronauta', 'presidente',\n",
+    "    'ingeniero', 'ingeniera','abogado', 'médico', 'astronauta', 'presidente',\n",
     "    'investigador', 'juez', 'académico'\n",
     "]\n",
     "\n",
@@ -1525,8 +1556,22 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:55:19.211843Z",
-     "start_time": "2020-05-07T16:55:19.207827Z"
+     "end_time": "2020-05-07T20:06:01.029061Z",
+     "start_time": "2020-05-07T20:06:01.023079Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "'ingeniera' in biobio_w2v.wv.vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-07T20:02:16.765474Z",
+     "start_time": "2020-05-07T20:02:16.758493Z"
     }
    },
    "outputs": [],
@@ -1539,8 +1584,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:55:21.685528Z",
-     "start_time": "2020-05-07T16:55:21.677523Z"
+     "end_time": "2020-05-07T20:06:16.285136Z",
+     "start_time": "2020-05-07T20:06:16.278154Z"
     }
    },
    "outputs": [],
@@ -1555,14 +1600,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:55:24.161193Z",
-     "start_time": "2020-05-07T16:55:24.154212Z"
+     "end_time": "2020-05-07T20:03:02.693925Z",
+     "start_time": "2020-05-07T20:03:02.685941Z"
     }
    },
    "outputs": [],
    "source": [
     "RND().run_query(\n",
-    "    Query([male_words, female_words], [career], ['Hombre', 'Mujer'],\n",
+    "    Query([male_words, female_words], [science], ['Hombre', 'Mujer'],\n",
     "          ['Ciencia']), model)"
    ]
   },
@@ -1571,8 +1616,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T16:55:26.638833Z",
-     "start_time": "2020-05-07T16:55:26.630855Z"
+     "end_time": "2020-05-07T20:03:40.273279Z",
+     "start_time": "2020-05-07T20:03:40.266298Z"
     }
    },
    "outputs": [],
@@ -1632,7 +1677,7 @@
     "width": "260.4px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
