Fix missing tokens in doc2vec transformer on tutorial 2

--- a/tutorials/Auxiliar_2.ipynb
+++ b/tutorials/Auxiliar_2.ipynb
@@ -246,8 +246,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T19:11:41.397200Z",
-     "start_time": "2020-05-07T19:11:32.488001Z"
+     "end_time": "2020-05-17T20:26:56.028758Z",
+     "start_time": "2020-05-17T20:26:52.011925Z"
     }
    },
    "outputs": [],
@@ -301,8 +301,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T19:12:51.320868Z",
-     "start_time": "2020-05-07T19:11:41.470005Z"
+     "end_time": "2020-05-17T20:27:38.022904Z",
+     "start_time": "2020-05-17T20:26:56.037686Z"
     }
    },
    "outputs": [],
@@ -320,8 +320,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T19:12:51.878612Z",
-     "start_time": "2020-05-07T19:12:51.626049Z"
+     "end_time": "2020-05-17T20:27:38.136649Z",
+     "start_time": "2020-05-17T20:27:38.050830Z"
     }
    },
    "outputs": [],
@@ -335,8 +335,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T19:15:36.682734Z",
-     "start_time": "2020-05-07T19:15:36.677747Z"
+     "end_time": "2020-05-17T20:27:38.183476Z",
+     "start_time": "2020-05-17T20:27:38.175498Z"
     }
    },
    "outputs": [],
@@ -349,8 +349,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T19:15:59.644037Z",
-     "start_time": "2020-05-07T19:15:59.639049Z"
+     "end_time": "2020-05-17T20:27:38.227359Z",
+     "start_time": "2020-05-17T20:27:38.221374Z"
     }
    },
    "outputs": [],
@@ -363,8 +363,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T19:16:25.633217Z",
-     "start_time": "2020-05-07T19:16:15.098899Z"
+     "end_time": "2020-05-07T21:21:12.916380Z",
+     "start_time": "2020-05-07T21:21:04.087799Z"
     }
    },
    "outputs": [],
@@ -401,8 +401,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T19:16:50.824807Z",
-     "start_time": "2020-05-07T19:16:50.818823Z"
+     "end_time": "2020-05-07T21:21:15.069544Z",
+     "start_time": "2020-05-07T21:21:15.063560Z"
     }
    },
    "outputs": [],
@@ -1114,9 +1114,7 @@
     "container = widgets.HBox([textbox])\n",
     "textbox.observe(response, names=\"value\")\n",
     "\n",
-    "widgets.VBox([container, fig])\n",
-    "\n",
-    "a"
+    "widgets.VBox([container, fig])"
    ]
   },
   {
@@ -1269,40 +1267,56 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-07T19:46:45.911556Z",
-     "start_time": "2020-05-07T19:46:45.902582Z"
+     "end_time": "2020-05-17T20:42:22.105698Z",
+     "start_time": "2020-05-17T20:42:22.094754Z"
     }
    },
    "outputs": [],
    "source": [
     "class Doc2VecTransformer(BaseEstimator, TransformerMixin):\n",
+    "    \"\"\" Transforma tweets a representaciones vectoriales usando algún modelo de Word Embeddings.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    def __init__(self, model, aggregation_func):\n",
-    "        self.model = model.wv # extraemos los keyedvectors. ojo con esta parte.\n",
+    "        # extraemos los embeddings desde el objeto contenedor. ojo con esta parte.\n",
+    "        self.model = model.wv \n",
+    "        \n",
+    "        # indicamos la función de agregación (np.min, np.max, np.mean, np.sum, ...)\n",
     "        self.aggregation_func = aggregation_func\n",
     "\n",
     "    def simple_tokenizer(self, doc, lower=False):\n",
+    "        \"\"\"Tokenizador. Elimina signos de puntuación, lleva las letras a minúscula(opcional) y \n",
+    "           separa el tweet por espacios.\n",
+    "        \"\"\"\n",
     "        if lower:\n",
-    "            doc.translate(str.maketrans('', '', punctuation)).lower().split()\n",
-    "        return doc.translate(str.maketrans('', '', punctuation)).split()\n",
+    "            doc.translate(str.maketrans('', '', string.punctuation)).lower().split()\n",
+    "        return doc.translate(str.maketrans('', '', string.punctuation)).split()\n",
     "\n",
     "    def transform(self, X, y=None):\n",
     "        \n",
-    "        wv = []\n",
+    "        doc_embeddings = []\n",
     "        \n",
     "        for doc in X:\n",
-    "            tokens = self.simple_tokenizer(doc)\n",
+    "            # tokenizamos el documento. Se llevan todos los tokens a minúscula. \n",
+    "            # ojo con esto, ya que puede que tokens con minúscula y mayúscula tengan\n",
+    "            # distintas representaciones\n",
+    "            tokens = self.simple_tokenizer(doc, lower = True) \n",
+    "            \n",
     "            selected_wv = []\n",
     "            for token in tokens:\n",
     "                if token in self.model.vocab:\n",
     "                    selected_wv.append(self.model[token])\n",
+    "                    \n",
+    "            # si seleccionamos por lo menos un embedding para el tweet, lo agregamos y luego lo añadimos.\n",
+    "            if len(selected_wv) > 0:\n",
+    "                doc_embedding = self.aggregation_func(np.array(selected_wv), axis=0)\n",
+    "                doc_embeddings.append(doc_embedding)\n",
+    "            # si no, añadimos un vector de ceros que represente a ese documento.\n",
+    "            else: \n",
+    "                print('No pude encontrar ningún embedding en el tweet: {}. Agregando vector de ceros.'.format(doc))\n",
+    "                doc_embeddings.append(np.zeros(self.model.vector_size)) # la dimension del modelo \n",
     "\n",
-    "            selected_wv = np.array(selected_wv)\n",
-    "            wv.append(self.aggregation_func(selected_wv, axis=0))\n",
-    "\n",
-    "        return np.array(wv)\n",
-    "    \n",
-    "    def fit(self, X, y=None):\n",
-    "        return self"
+    "        return np.array(doc_embeddings)\n"
    ]
   },
   {
