--- a/slides/NLP-RNN.tex
+++ b/slides/NLP-RNN.tex
@@ -837,6 +837,24 @@ p(label = k | \vec{w}_{1:n}) & = \hat{\vec{y}}_{[k]} \\
 
 
 
+\begin{frame}{Bi-LSTM CRF}
+\begin{scriptsize}
+
+\begin{itemize}
+
+\item In a CRF we model the conditional probability of the output tag sequence given the input sequence:
+
+\begin{displaymath}
+ P(s_1, \dots, s_m | x_1, \dots, x_m) = P(s_{1:m}|x_{1:m})
+\end{displaymath}
+
+
+\end{itemize}
+\end{scriptsize}
+\end{frame}
+
+
+
 \begin{frame}
 \frametitle{Questions?}
 %\vspace{1.5cm}
